spacing fixed

--- a/2024/assets/css/user.css
+++ b/2024/assets/css/user.css
@@ -7,3 +7,7 @@
 .mybg-holder{
 	background-size:contain!important
 }
+
+.min-vh-80{
+	min-height:80vh !important
+}
